# astro-stock

./: .gitignore  README.md  docker-compose.yml  ipinfo.txt  pnpm-lock.yaml  portproxy.txt  pp2.txt
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  env.example.md  pyproject.toml
backend/app/: __init__.py  auth.py  db.py  main.py  models.py  schemas.py
backend/app/api/: alerts.py  astronomy.py  auth.py  backtest.py  dashboard.py  health.py  heatmap.py  leaderboard.py  llm.py  market.py  natal.py  portfolio.py  scoring.py  sky.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  backtest.py  ephem.py  heatmap.py  llm.py  market.py  scheduler.py  scoring.py  sector_map.py  transit_alert.py
backend/data/: astrostock.db
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_alerts.py  0003_interpretations.py  0004_backtest_bars.py
docs/: design-doc.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts
frontend/src/__tests__/: dashboard.algo.test.ts
frontend/src/components/: TheSidebar.vue
frontend/src/pages/: AuthPage.vue  BirthChartPage.vue  DashboardPage.vue  HealthPage.vue  HeatmapPage.vue  LeaderboardPage.vue  MarketCalendarPage.vue  PortfolioPage.vue  SkyHistoryPage.vue  StockDetailPage.vue
frontend/src/stores/: theme.ts
prototype/: index.html
scripts/: test_frontend.py
(+1 files in other folders)
